started to play with running - having some issue with blurred path after css3 transform

--- a/src/css/_oval.scss
+++ b/src/css/_oval.scss
@@ -5,9 +5,22 @@
 
 	width:$width;
 	height:$width/$ratio;
+	
+
+	perspective: 700px;
+	perspective-origin: 30% 50%;
+
+	transform-style: preserve-3d;
+
+	backface-visibility: hidden;
+
 	svg {
-		width:$width*0.8;
-		height:$width/$ratio*0.8;
+		//width:$width*1;
+		//height:$width/$ratio*1;//0.8;
+		
+		backface-visibility: hidden;
+		transform:rotateX(45deg) rotateY(0deg) rotateZ(-10deg) translateX(220px) translateY(160px) translateZ(0px) scale(1);
+		transform-style: preserve-3d;
 
 		.inner-border {
 			path {
