--- a/src/css/_swimming-perspective.scss
+++ b/src/css/_swimming-perspective.scss
@@ -200,8 +200,7 @@
 						stroke-opacity:0;
 						fill:none;
 						@include mq(tablet) {
-
-							stroke:#000;
+							stroke:#666;
 						}
 					}
 					
